--- a/aws/aws-cleanup-resources.yml
+++ b/aws/aws-cleanup-resources.yml
@@ -5,8 +5,7 @@
   gather_facts: no
   tasks:
   #- include: cleanup-elb.yml # TODO Find way to clean up ELBs with 0 instances
-  #- include: cleanup-asg.yml
-  - include: find-unused-groups.yml
-  - include: delete-unused-groups.yml
-
+  - include: cleanup-asg.yml
+  - include: cleanup-sg.yml
+  
 ...
